<?xml version="1.0" encoding="utf-8"?>

<!--
* Project "Save Me"
* Created by Dragos Atanasoae
* Email: dragos.atanasoae@gmail.com
* University "1 Decembrie 1918" Alba-Iulia
* MIT License
* Copyright (c) 2018 Dragos Atanasoae
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_splash">

    <Button
        android:id="@+id/button_location"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12dp"
        android:background="@android:drawable/ic_menu_compass" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_location"
        android:layout_below="@+id/button_location"
        android:layout_marginTop="9dp"
        android:text="@string/get_location"
        android:textColor="#fff"
        android:textSize="12sp"
        android:id="@+id/textView5" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_location"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:text="@string/no_data"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/infoSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/send_your_location_details"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/btnSendSMS"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_sms3"
        android:contentDescription="@string/icon_sms_sos" />

</RelativeLayout>
